<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacJoe</string>
    <string name="action_settings">Settings</string>
    <string name="player_goes_first">You go first.</string>
    <string name="player_turn">It\'s your turn.</string>
    <string name="computer_turn">Joe\'s turn.</string>
    <string name="tie">It\'s a tie!</string>
    <string name="player_win">You won!</string>
    <string name="computer_win">Joe kicked your ass: </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Score Board:</string>
    <string name="num_of_player_wins">Player:  </string>
    <string name="num_of_ties">Ties:  </string>
    <string name="computer">Computer:  </string>
    <string name="contact_heading">Contact Info</string>
    <string name="about_heading">About:</string>
    <string name="about_info">This app lets you play against the never losing Joe. Can you beat Joe?</string>
    <string name="new_game">New Game</string>
    <string name="exit_game">Exit Game</string>
    <string name="title_activity_one_player">OnePlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="one_player">One Player</string>
    <string name="two_player">Two Player</string>
    <string name="about">About</string>
    <string name="title_activity_two_player">TwoPlayer</string>
    <string name="title_activity_about">About</string>
    <string name="player_1">Player 1\'s Turn</string>
    <string name="player_2">Player 2\'s Turn</string>
    <string name="player_1_win">Player 1 Wins</string>
    <string name="player_2_win">Player 2 Wins</string>
    <string name="player_1_score">Player 1:</string>
    <string name="player_2_score">Player 2:</string>
    <string name="main_menu">Main Menu</string>

</resources>
